Fix tooltip flickering

--- a/core-bundle/contao/themes/flexible/styles/basic.css
+++ b/core-bundle/contao/themes/flexible/styles/basic.css
@@ -884,6 +884,7 @@ a.tl_submit {
 	border-radius: 2px;
 	background: var(--invert-bg);
 	z-index: 99;
+	pointer-events: none;
 }
 
 .tip div {
